--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,9 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# personal files
+notes/notes.txt
+notes/profiling_tools_guide.txt
+notes/optimization.txt
+
